--- a/Lab-1/index.html
+++ b/Lab-1/index.html
@@ -3,13 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ehtasham</title>
   </head>
   <body>
-    <h1>Welcome to my First Website</h1>
-    <p>
-      My name is X and I'm student of Quaid-i-Azam Uinversity. I'm studying
-      computer science. It is my 5th semester.
-    </p>
+    <header>
+        <h1>Welcome to my First Website</h1>
+    </header>
+    <body>
+        <p>
+            My name is Ehtasham  and I'm student of Quaid-i-Azam Uinversity. I'm studying
+            computer science. It is my 6th semester.
+        </p>
+        <ol>
+            <ld about</ld>
+            <ld >contact us</ld>
+        </ol>
+        <section id="about">
+<h2>about</h2>
+<p>My name is Ehtasham  and I'm student of Quaid-i-Azam Uinversity. I'm studying
+    computer science. It is my 6th semester.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact us</h2>
+            <a href="ahtashamkingking5@gmail.com">email</a>
+                    </section>
+    </body>
+    
+    
+    <footer>
+        good bye
+    </footer>
   </body>
 </html>
