--- a/lab6/index.html
+++ b/lab6/index.html
@@ -29,8 +29,8 @@
             <h2 class="text-xl font-semibold">Content</h2>
             <li><a href="#home">Home Page</a></li>
             <li><a href="#profile">Profile</a></li>
-            <li><a href="#mlsa">MLSA</a></li>
-            <li><a href="#end">The End</a></li>
+            <li><a href="explore.html">Explore</a></li>
+            <li><a href="design.html">design</a></li>
           </ul>
         </aside>
 
